# ssp

./: .gitignore  Dockerfile  README.md  pyproject.toml  ssp.py
modules/: __init__.py  _bot.py  _webhook.py  server.py
schemas/: __init__.py  _blog.py  _t_channel.py  _webhook.py
utils/: __init__.py  utils.py
